# ffmpeg_pipeline

./: .flake8  README.md
.github/workflows/: ci.yml
ffmpeg_controllers/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  plugins.xml
ffmpeg_controllers/include/ffmpeg_controllers/: audio_converter_filter.hpp  audio_fifo_filter.hpp  audio_packet_broadcaster.hpp  broadcaster_base.hpp  compressed_image_broadcaster.hpp  controller_base.hpp  controller_options.hpp  decoder_filter.hpp  encoder_filter.hpp  ffmpeg_decoder_broadcaster.hpp  ffmpeg_packet_broadcaster.hpp  filter_base.hpp  frame_broadcaster.hpp  frame_broadcaster_base.hpp  frame_receiver.hpp  frame_writer.hpp  image_broadcaster.hpp  interface_adapter.hpp  name_based_decoder_filter.hpp  packet_broadcaster.hpp  packet_broadcaster_base.hpp  packet_controller.hpp  packet_controller_base.hpp  packet_receiver.hpp  packet_writer.hpp  parameter_based_decoder_filter.hpp  parser_based_decoder_filter.hpp  parser_filter.hpp  pixel_converter_filter.hpp  receiver_base.hpp  video_converter_filter.hpp  video_decoder_broadcaster.hpp  video_packet_broadcaster.hpp  writer_base.hpp
ffmpeg_controllers/include/ffmpeg_controllers/detail/: controller_interface_adapter.hpp  controller_traits.hpp  input_mixin.hpp  input_output_mixin.hpp  input_output_options.hpp  interface_adapter.hpp  output_mixin.hpp  utility.hpp
ffmpeg_controllers/src/: ffmpeg_controllers.cpp
ffmpeg_cpp/: CHANGELOG.rst  CMakeLists.txt  package.xml
ffmpeg_cpp/include/ffmpeg_cpp/: ffmpeg_cpp.hpp
ffmpeg_cpp/src/: codec_parameters.cpp  decode_bag.cpp  decode_topic.cpp  decoder.cpp  ffmpeg_cpp.cpp  frame.cpp  input.cpp  internal.hpp  parser.cpp  play_wav.cpp  stream_camera.cpp  utility.cpp  video_converter.cpp
ffmpeg_cpp/src/demos/: decode_bag.cpp  play_wav.cpp  stream_camera.cpp
ffmpeg_cpp/src/ffmpeg_cpp/: audio_converter.cpp  audio_fifo.cpp  codec_parameters.cpp  converter.cpp  datatypes.cpp  decoder.cpp  dictionary.cpp  encoder.cpp  format_encoding_pairs.hpp  frame.cpp  input.cpp  internal.hpp  output.cpp  packet.cpp  parser.cpp  utility.cpp  video_converter.cpp
ffmpeg_hardware/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  plugins.xml
ffmpeg_hardware/include/ffmpeg_hardware/: dump_info_output.hpp  ffmpeg_hardware.hpp  ffmpeg_input.hpp  ffmpeg_output.hpp  interface_adapter.hpp  mock_output.hpp
ffmpeg_hardware/src/: ffmpeg_hardware.cpp
ffmpeg_image_transport/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  plugins.xml
ffmpeg_image_transport/include/ffmpeg_image_transport/: compressed_image_publisher.hpp  compressed_image_subscriber.hpp  ffmpeg_subscriber.hpp  video_packet_subscriber.hpp
ffmpeg_image_transport/src/: ffmpeg_image_transport.cpp
ffmpeg_pipeline/: CHANGELOG.rst  CMakeLists.txt  package.xml
ffmpeg_pipeline_examples/: CHANGELOG.rst  CMakeLists.txt  package.xml
ffmpeg_pipeline_examples/h264_camera/: controllers.yaml  h264_camera_pipeline.launch.py  hardware_description.urdf.xacro  robot_description.urdf.xacro
ffmpeg_pipeline_examples/h264_stream/: controllers.yaml  robot_description.urdf  view_image.launch.py
ffmpeg_pipeline_examples/image_stream/: controllers.yaml  robot_description.urdf  view_image_stream.launch.py
ffmpeg_pipeline_examples/pulse_audio/: controllers.yaml  pulse_audio_pipeline.launch.py  robot_description.urdf.xacro
ffmpeg_pipeline_examples/pulse_audio/capture/: controllers.yaml  hardware_description.urdf.xacro  pulse_audio_capture_pipeline.launch.py  robot_description.urdf.xacro
ffmpeg_pipeline_examples/pulse_audio/capture_raw/: controllers.yaml  pulse_audio_capture_raw_pipeline.launch.py  robot_description.urdf.xacro
ffmpeg_pipeline_examples/pulse_audio/play/: controllers.yaml  hardware_description.urdf.xacro  pulse_audio_play_pipeline.launch.py  robot_description.urdf.xacro
ffmpeg_pipeline_examples/pulse_audio/play_raw/: controllers.yaml  pulse_audio_play_raw_pipeline.launch.py
ffmpeg_pipeline_examples/wav_file/: controllers.yaml  hardware_description.urdf.xacro  robot_description.urdf.xacro  wav_file_pipeline.launch.py
ffmpeg_pipeline_examples/webp_file/: controllers.yaml  hardware_description.urdf.xacro  robot_description.urdf  robot_description.urdf.xacro  webp_file_pipeline.launch.py
ffmpeg_pipeline_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
ffmpeg_pipeline_msgs/msg/: Frame.msg  Packet.msg
images/: ffmpeg_pipeline_figs.pptx
