<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ffmpeg_controllers</name>
  <version>0.0.1</version>
  <description>TODO: Package description</description>
  <maintainer email="okada@tohoku.ac.jp">root</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>ffmpeg_cpp</depend>
  <depend>ffmpeg_pipeline_msgs</depend>
  <depend>message_filters</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>realtime_tools</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <!-- <test_depend>ament_lint_common</test_depend> -->
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
