<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ffmpeg_pipeline</name>
  <version>0.0.1</version>
  <description>A flexible pipeline for video/audio acquisition, encoding, decoding, and output using ffmpeg</description>
  <maintainer email="okada@tohoku.ac.jp">Yoshito Okada</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ffmpeg_controllers</depend>
  <depend>ffmpeg_cpp</depend>
  <depend>ffmpeg_hardware</depend>
  <depend>ffmpeg_image_transport</depend>
  <depend>ffmpeg_pipeline_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
