cmake_minimum_required(VERSION 3.8)
project(ffmpeg_pipeline_examples)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(controller_manager REQUIRED)
find_package(ffmpeg_controllers REQUIRED)
find_package(ffmpeg_hardware REQUIRED)
find_package(ffmpeg_image_transport REQUIRED)

install(
  DIRECTORY h264_camera pulse_audio wav_file webp_file
  DESTINATION share/ffmpeg_pipeline_examples)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
