<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ffmpeg_pipeline_examples</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="okada@tohoku.ac.jp">root</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_manager</depend>
  <depend>ffmpeg_controllers</depend>
  <depend>ffmpeg_hardware</depend>
  <depend>ffmpeg_image_transport</depend>
  <depend>robot_state_publisher</depend>
  <depend>ros2launch</depend>
  <depend>xacro</depend>

  <test_depend>ament_lint_auto</test_depend>
  <!-- <test_depend>ament_lint_common</test_depend> -->
  <test_depend>ament_cmake_flake8</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_pep257</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
